# FmodEx

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/zmz/fmodex/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: com_zmz_fmodex_VoliUtil.h  zmz_lib.cpp
app/src/main/java/com/zmz/fmodex/: MainActivity.java  VoliUtil.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/zmz/fmodex/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
